--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,17 @@
-Hola Todos
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bubbles</title>
+    <script src="https://cdn.jsdelivr.net/npm/pixi.js/dist/browser/pixi.min.js"></script> 
+</head>
+<body>
+    <!--<h1>Bubbles </h1>-->
+
+    <script src = "Burbuja"></script>
+    <script src = "Interfaz.js"></script>
+    <script src="Juego.js"></script>
+
+</body>
+</html>
