--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
 <body>
     <!--<h1>Bubbles </h1>-->
 
-    <script src = "Burbuja"></script>
+    <!--<script src = "Burbuja"></script>-->
     <script src = "Interfaz.js"></script>
     <script src="Juego.js"></script>
 
