--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,40 @@
     <title>Bubbles</title>
     <script src="https://cdn.jsdelivr.net/npm/pixi.js/dist/browser/pixi.min.js"></script> 
 </head>
+<style>
+    body {
+        position: relative; 
+        height: 100vh; 
+        margin: 0;
+    }
+    #start-audio {
+    position: absolute;
+    top: 540px;  /* desde la parte superior */
+    left: 10px;  /* desde la parte izquierda */
+    width: 40px;
+    height: 40px;
+    background-image: url('./assets/componentes/003.png');
+    background-size: cover;
+    border: none;
+    outline: none; 
+    padding: 0;  
+    margin: 0;  
+    cursor: pointer;
+}
+
+</style>
+<button id="start-audio"></button>
+<audio id="my-audio" src="./assets/thunderbird-game-over-9232.mp3" preload="auto"></audio>
+
+<script>
+    const audio = document.getElementById('my-audio');
+    audio.play();
+    document.getElementById('start-audio').addEventListener('click', function() {
+    audio.pause(); 
+});
+
+
+</script>
 <body>
     <!--<h1>Bubbles </h1>-->
 
