--- a/Index.html
+++ b/Index.html
@@ -14,12 +14,13 @@
     }
     #start-audio {
     position: absolute;
-    top: 540px;  /* desde la parte superior */
-    left: 10px;  /* desde la parte izquierda */
+    top: 40px;  /* desde la parte superior */
+    left: 705px;  /* desde la parte izquierda */
     width: 40px;
     height: 40px;
-    background-image: url('./assets/componentes/003.png');
+    background-image: url('./assets/componentes/audio.png');
     background-size: cover;
+    background-color: transparent; 
     border: none;
     outline: none; 
     padding: 0;  
@@ -41,7 +42,6 @@
 
 </script>
 <body>
-    <!--<h1>Bubbles </h1>-->
 
     <!--<script src = "Burbuja"></script>-->
     <script src = "Interfaz.js"></script>
