Modificaciones de burbujas

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     }
     #start-audio {
     position: absolute;
-    top: 40px;  /* desde la parte superior */
-    left: 705px;  /* desde la parte izquierda */
-    width: 40px;
-    height: 40px;
-    background-image: url('./assets/componentes/audio.png');
+    top: 45px;  
+    left: 705px;  
+    width: 32px;
+    height: 32px;
+    background-image: url('./Assets/componentes/audio.png');
     background-size: cover;
     background-color: transparent; 
     border: none;
@@ -30,7 +30,7 @@
 
 </style>
 <button id="start-audio"></button>
-<audio id="my-audio" src="./assets/thunderbird-game-over-9232.mp3" preload="auto"></audio>
+<audio id="my-audio" src="./Assets/thunderbird-game-over-9232.mp3" preload="auto"></audio>
 
 <script>
     const audio = document.getElementById('my-audio');
